--- a/package.json
+++ b/package.json
@@ -5,19 +5,27 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fontsource/outfit": "^4.5.1",
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.4.0",
+    "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-gatsby-cloud": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-offline": "^5.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-sass": "^5.5.0",
     "gatsby-plugin-sharp": "^4.4.0",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-transformer-sharp": "^4.4.0",
+    "gbimage-bridge": "^0.2.1",
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
+    "sass": "^1.48.0"
   },
   "devDependencies": {
     "prettier": "^2.5.1"
